prepare before release

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,16 @@
 <resources>
-    <string name="app_name">TOP5_0004</string>
-    <string name="facebook_app_id">255945338492700</string>
-    <string name="fb_login_protocol_scheme">fb255945338492700</string>
+    <string name="app_name">Счастливая семёрка</string>
+    <string name="facebook_app_id">2174388666208142</string>
+    <string name="fb_login_protocol_scheme">fb2174388666208142</string>
 
-    <string name="s_1">Привет! Спасибо что установил наше приложение на свой Смартфон!\nЛучшие игровые автоматы ждут тебя! Вперед к большим выигрышам!</string>
-    <string name="s_2">Какой удачный день! Наверно сегодня твой день!\nЗаходи в приложение и испытай свою удачу сегодня! Вперед к большим выигрышам!</string>
-    <string name="s_3">Хороший день для больших побед!\nЛучшие игровые автоматы ждут тебя, счастливчик! Забери свой выигрыш!</string>
-    <string name="s_4">Заходи в гости, время покрутить слоты!\nСегодня на всех игровых Автоматах Ооочень большой Джекпот, СОРВИ его!</string>
+    <string name="asds_1">Привет! Спасибо что установил наше приложение на свой Смартфон!\nЛучшие игровые автоматы ждут тебя! Вперед к большим выигрышам!</string>
+
     <string name="s_5">Ты же знаешь чего хочешь!\nСегодня очень хороший день для Больших Выигрышей! Вперед за победой!</string>
-    <string name="s_6">Время побеждать, товарищ счастливчик!\nЛучшие игровые автоматы ждут тебя и именно ты должен победить сегодня!</string>
-    <string name="s_7">Хороший день для больших побед!\nЛучшие игровые автоматы ждут тебя, счастливчик! Забери свой выигрыш!</string>
-
-    <string name="title_activity_login">заходи</string>
+    <string name="staa_4">Заходи в гости, время покрутить слоты!\nСегодня на всех игровых Автоматах Ооочень большой Джекпот, СОРВИ его!</string>
+    <string name="ssaf_242">Какой удачный день! Наверно сегодня твой день!\nЗаходи в приложение и испытай свою удачу сегодня! Вперед к большим выигрышам!</string>
+    <string name="ssdv_6">Время побеждать, товарищ счастливчик!\nЛучшие игровые автоматы ждут тебя и именно ты должен победить сегодня!</string>
     <string name="prompt_email">мыол</string>
-    <string name="prompt_password">пароль</string>
-    <string name="action_sign_in">регистрация</string>
     <string name="action_sign_in_short">вход</string>
-    <string name="welcome">велкам</string>
-    <string name="invalid_username">не правильный юрез</string>
-    <string name="invalid_password">пароль опять</string>
-    <string name="login_failed">ошибка</string>
-
+    <string name="saf_3">Хороший день для больших побед!\nЛучшие игровые автоматы ждут тебя, счастливчик! Забери свой выигрыш!</string>
+    <string name="sasd_7324">Хороший день для больших побед!\nЛучшие игровые автоматы ждут тебя, счастливчик! Забери свой выигрыш!</string>
 </resources>
