--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,16 @@
     <string name="action_sign_in_short">вход</string>
     <string name="saf_3">Хороший день для больших побед!\nЛучшие игровые автоматы ждут тебя, счастливчик! Забери свой выигрыш!</string>
     <string name="sasd_7324">Хороший день для больших побед!\nЛучшие игровые автоматы ждут тебя, счастливчик! Забери свой выигрыш!</string>
+
+
+    <string name="text_1">Вперед к большим выигрышам!\nЛучшие игровые автоматы ждут тебя!</string>
+    <string name="text_2">Какой удачный день!\nЗаходи в приложение и испытай свою удачу сегодня!</string>
+    <string name="text_3">Хороший день для больших побед!\nЛучшие игровые автоматы ждут тебя, счастливчик!</string>
+    <string name="text_4">Заходи в гости, время покрутить слоты!\nСегодня будет очень большой Джекпот, СОРВИ его!</string>
+    <string name="text_5">Ты же знаешь чего хочешь!\nСегодня очень хороший день для Больших Выигрышей!</string>
+    <string name="text_6">Время побеждать!\nЛучшие игровые автоматы ждут тебя!</string>
+    <string name="text_7">Хороший день для больших побед!\nЛучшие игровые автоматы ждут тебя!</string>
+    <string name="text_9">Хороший день для больших побед!\nЛучшие игровые автоматы ждут тебя!</string>
+
+
 </resources>
